--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body id="top">
 <header class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5" id="header-nav" role="navigation">
         <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Андрей Башин</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-2">
                     <li class="nav-item"><a class="nav-link" href="#about">Обо мне</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Услуги</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Ценность</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills"></a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Сертификаты</a></li>
                     <li class="nav-item"><a class="nav-link" href="#experience">Опыт</a></li>
@@ -61,8 +61,8 @@
             <div class="cover bg-light">
                 <div class="container px-3">
                     <div class="text-center mb-5">
-                        <h2 class="marker marker-center" data-aos="fade-up" data-aos-delay="50">Трекинг продуктовых
-                            команд</h2>
+                        <h1 class="marker marker-center mt-5" data-aos="fade-up" data-aos-delay="50">Трекинг продуктовых
+                            команд</h1>
                     </div>
                     <div class="row">
                         <p class="mx-auto mb-3 col-md-6" style="max-width:600px; text-align: center;">Трекинг
@@ -72,16 +72,22 @@
                             бизнес <br>
                             Трекер пропускает "через себя" сотни идей и продуктов ежегодно</p>
                     </div>
+
                     <div class="row">
-                        <div class="col-lg-6 p-2"><img class="img-fluid" src="images/illustrations/hello2.svg"
-                                                       alt="hello"/></div>
+                        <div class="col-lg-6 p-2 d-flex justify-content-center">
+                            <img
+                                    class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400"
+                                    alt="Walter Patterson"/>
+                        </div>
                         <div class="col-lg-6">
                             <div class="mt-5">
                                 <p class="lead text-uppercase mb-1">Привет!</p>
                                 <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">Я Андрей
                                     Башин</h1>
-                                <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Профессиональный
-                                    бизнес-трекер</p>
+                                <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Трекер продуктовых команд и Предпринимателей.
+                                    <br>
+                                    Стратегический консалтинг.
+                                </p>
                                 <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
                                     <nav role="navigation">
                                         <ul class="nav justify-content-left">
@@ -132,7 +138,7 @@
           </span>
                             <br>
                             <span class="services-item">
-            Насмотренность больше 100 проектов
+            Насмотренность > 100 проектов
           </span>
                             <br>
                             <span class="services-item">
@@ -140,32 +146,66 @@
           </span>
                             <br>
                             <span class="services-item">
-            "Играющий Тренер" - Product Owner Scrum Master
+            "Играющий Тренер" - Product Owner Scrum Master,
+                                <br>>6`ти лет в Продуктовой разработке
           </span>
                             <br>
-                            <span class="services-item">
+                            <span class="services-item mb-1">
             Супервизии с Мастер Трекерами
+          </span>
+                            <span class="services-item mb-1">
+            Стратегическое видение
+          </span>
+                            <span class="services-item">
+            Финтех эксперт
           </span>
                             <br>
                             <span class="services-item">
              >15к Нетворк
           </span>
                             <br>
-                            <span class="services-item">
-            Больше 6`ти лет в Продуктовой разработке
-          </span>
                         </p>
                     </div>
-                    <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img
-                            class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400"
-                            alt="Walter Patterson"/></div>
+                    <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100">
+                        <img class="img-fluid" src="images/illustrations/hello2.svg"
+                             alt="hello"/>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="section px-3 px-lg-4 pt-5" id="forWho">
+            <div class="container-narrow">
+        <div class="text-center mb-5 mt-3">
+            <h2 class="marker marker-center">Для кого?</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 mb-4 d-flex flex-column align-items-center" data-aos="fade-left" data-aos-delay="100">
+                <img src="./images/illustrations/work-together.svg" alt="" style="width:50%;">
+                <p class="lead mt-2"><b>Продуктовые команды корпораций</b></p>
+            </div>
+            <div class="col-md-6 mb-4 d-flex flex-column align-items-center" data-aos="fade-right" data-aos-delay="100">
+                <img src="./images/illustrations/building_websites.svg" alt="" style="width:36%;">
+                <p class="lead mt-2"><b>Стартапы на любой стадии</b></p>
+            </div>
+            <div class="col-md-6 mb-4 d-flex flex-column align-items-center" data-aos="fade-left" data-aos-delay="100">
+                <img src="./images/illustrations/creative-team.svg" alt="" style="width:50%;">
+                <p class="lead mt-2"><b>Предприниматели</b></p>
+            </div>
+            <div class="col-md-6 mb-4 d-flex flex-column align-items-center" data-aos="fade-left" data-aos-delay="100">
+                <img src="./images/illustrations/work-chat.svg" alt="" style="width:50%;">
+                <p class="lead mt-2"><b>Акселераторы</b></p>
+            </div>
+            <div class="col-md-6 d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="200">
+                <img src="./images/illustrations/website-app.svg" alt="" style="width:50%;">
+                <p class="lead mt-2"><b>Венчурные фонды</b></p>
+            </div>
+        </div>
+                </div>
+            </div>
         <div class="section px-3 px-lg-4 pt-5" id="services">
             <div class="container-narrow">
                 <div class="text-center mb-5">
-                    <h2 class="marker marker-center">Мои услуги</h2>
+                    <h2 class="marker marker-center">Ценнность для бизнеса</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
