--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             <div class="card-header px-3 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h5 mb-1">Head of the Ecosystem b2b Strategy Department & Tracker</h3>
+                                        <h3 class="h5 mb-1">ex.Head of the Ecosystem b2b Strategy Department & Tracker</h3>
                                         <div class="text-muted text-small">MTS Group</div>
                                     </div>
                                     <img src="images/companies/mts.png" width="70" height="70" alt="mts"/>
@@ -353,7 +353,7 @@
                             <div class="card-header px-3 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h5 mb-1">VP, Chief Product Owner Acquiring SME</h3>
+                                        <h3 class="h5 mb-1">ex.VP, Chief Product Owner Acquiring SME</h3>
                                         <div class="text-muted text-small">Raiffeisen Bank
                                             Russia
                                         </div>
@@ -369,7 +369,7 @@
                             <div class="card-header px-3 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h5 mb-1">Product Owner Business cards and Acquiring SME</h3>
+                                        <h3 class="h5 mb-1">ex.Product Owner Business cards and Acquiring SME</h3>
                                         <div class="text-muted text-small">Alfa-Bank</div>
                                     </div>
                                     <img src="images/companies/alfa.png" width="50" height="50" alt="alfa bank"/>
@@ -382,7 +382,7 @@
                             <div class="card-header px-3 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h5 mb-1">CBDO</h3>
+                                        <h3 class="h5 mb-1">ex.CBDO</h3>
                                         <div class="text-muted text-small">Mobile Dimension
                                             LLC
                                         </div>
@@ -725,7 +725,7 @@
                     <div class="d-flex justify-content-end align-items-end">
                         <div class="text-end me-2">
                             <div class="fw-bolder"><a href="https://www.facebook.com/ZhilinDL">Дмитрий Жилин</a></div>
-                            <div class="text-small">CFO/ Финансовый партнер "Альфа Банк" МСБ</div>
+                            <div class="text-small">ex.CFO/ Финансовый партнер "Альфа Банк" МСБ</div>
                         </div><img class="me-md-3 rounded" src="images/partners/zhilin.jpg" width="96" height="96" alt="client 1"/>
                     </div>
                 </div>
